--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
 
-        .nav-btn { font-size: 0.95rem; }
+        .nav-btn { font-size: 1.25rem; }
+        .hide-scrollbar::-webkit-scrollbar { display: none; }
     </style>
 </head>
 <body class="bg-pattern">
@@ -123,7 +124,9 @@
                 'sparkles': "M12 3l1.912 5.886L21 10.8l-5.176 3.914L17.738 21 12 17.114 6.262 21l1.914-6.286L3 10.8l7.088-1.914L12 3z",
                 'phone': "M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z",
                 'map-pinned': "M12 22s-8-4.5-8-11.8A8 8 0 0 1 12 2a8 8 0 0 1 8 8.2c0 7.3-8 11.8-8 11.8z M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z",
-                'utensils': "M3 2v7c0 1.1.9 2 2 2h4c1.1 0 2-.9 2-2V2M7 2v20M21 15V2v0a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7"
+                'utensils': "M3 2v7c0 1.1.9 2 2 2h4c1.1 0 2-.9 2-2V2M7 2v20M21 15V2v0a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7",
+                'plane': "M22 16.21v-1.89L14.84 9.9 14.84 4a1.5 1.5 0 0 0-3 0v5.9L4.67 14.32v1.89l7.17-2.73v5.13l-1.71 1.14v1.33l3.37-1.01 3.37 1.01v-1.33l-1.71-1.14v-5.13L22 16.21z",
+                'languages': "M5 8l6 6M4 14l6-6M2 5h12M7 2h1M22 22l-5-10-5 10M14 18h6"
             };
             return (
                 <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className={`${className} pointer-events-none transition-all`}>
@@ -146,12 +149,25 @@
 
             const [expandedCats, setExpandedCats] = useState({
                 '一、證件與金錢': true, '二、Ruby 寶寶專區': true, '三、衣物配件': true,
-                '四、3C 數位產品': true, '五、藥品與保健': true, '六、盥洗與清潔': true
+                '四、3C 數位產品': true, '五、藥品與保健': true, '六、盥洗與清潔': true,
+                '生存日語小手冊': false
             });
 
+            // 🛠️ 擴充地圖點
             const mapSpotList = [
                 { category: '熱門景點 ⛩️', items: ['博多運河城', '櫛田神社', '太宰府天滿宮', '福岡城跡/大濠公園', '福岡塔', 'LaLaport 福岡 (鋼彈)', '海之中道海濱公園'] },
+                { category: '必逛商場/藥妝 🛍️', items: ['天神地下街', '唐吉訶德 中洲店', '大國藥妝', '永旺夢樂城AEON', '博多車站阪急'] },
                 { category: '家族美食 🥩', items: ['燒肉 大東園', '一蘭拉麵 總店', '博多華味鳥 (水炊鍋)', '元祖博多明太子飯', '博多牛雜鍋 おおやま', 'bills 福岡 (鬆餅)'] }
+            ];
+
+            // 🛠️ 常用日語
+            const survivalPhrases = [
+                { jp: 'ありがとう', ro: 'Arigatou', tw: '謝謝' },
+                { jp: 'すみません', ro: 'Sumimasen', tw: '不好意思 / 請問' },
+                { jp: 'いくらですか？', ro: 'Ikura desu ka?', tw: '多少錢？' },
+                { jp: 'これをください', ro: 'Kore o kudasai', tw: '請給我這個' },
+                { jp: 'トイレはどこですか？', ro: 'Toire wa doko desu ka?', tw: '廁所在哪裡？' },
+                { jp: 'お会計をお願いします', ro: 'Okaikei o onegaishimasu', tw: '請幫我結帳' }
             ];
 
             const [newExpense, setNewExpense] = useState({ 
@@ -262,17 +278,13 @@
                 showToast("行程已移除");
             };
 
-            const togglePacking = (itemName) => {
-                setPackingItems(prev => ({ ...prev, [itemName]: !prev[itemName] }));
-            };
-
             const toggleCategory = (catName) => { setExpandedCats(prev => ({ ...prev, [catName]: !prev[catName] })); };
 
             return (
                 <div className="max-w-md mx-auto min-h-screen relative pb-20">
                     {/* Toast */}
                     <div className={`fixed top-6 left-1/2 -translate-x-1/2 z-[200] transition-all duration-500 ${toast.show ? 'opacity-100 translate-y-0' : 'opacity-0 -translate-y-10 pointer-events-none'}`}>
-                        <div className="bg-black/90 text-white px-6 py-3 rounded-full flex items-center gap-2 shadow-xl border border-purple-400 backdrop-blur-md text-sm">
+                        <div className="bg-black/90 text-white px-6 py-3 rounded-full flex items-center gap-2 shadow-xl border border-purple-400 backdrop-blur-md text-sm text-center">
                             <Icon name="check-circle" size={18} className="text-pink-400" />
                             <span className="font-bold">{toast.msg}</span>
                         </div>
@@ -295,10 +307,10 @@
 
                     {/* 導覽列 */}
                     <nav className="flex bg-white/95 backdrop-blur-lg sticky top-0 z-50 px-2 border-b-4 border-purple-50 shadow-sm overflow-x-auto hide-scrollbar">
-                        <button onClick={() => { setActiveTab('itinerary'); setItineraryView('list'); }} className={`flex-1 min-w-[70px] py-5 font-black nav-btn transition-all ${activeTab === 'itinerary' ? 'tab-active' : 'text-slate-400'}`}>行程</button>
-                        <button onClick={() => setActiveTab('map')} className={`flex-1 min-w-[70px] py-5 font-black nav-btn transition-all ${activeTab === 'map' ? 'tab-active' : 'text-slate-400'}`}>地圖</button>
-                        <button onClick={() => setActiveTab('expense')} className={`flex-1 min-w-[70px] py-5 font-black nav-btn transition-all ${activeTab === 'expense' ? 'tab-active' : 'text-slate-400'}`}>記帳</button>
-                        <button onClick={() => setActiveTab('tools')} className={`flex-1 min-w-[70px] py-5 font-black nav-btn transition-all ${activeTab === 'tools' ? 'tab-active' : 'text-slate-400'}`}>工具</button>
+                        <button onClick={() => { setActiveTab('itinerary'); setItineraryView('list'); }} className={`flex-1 min-w-[80px] py-6 font-black nav-btn transition-all ${activeTab === 'itinerary' ? 'tab-active' : 'text-slate-400'}`}>行程</button>
+                        <button onClick={() => setActiveTab('map')} className={`flex-1 min-w-[80px] py-6 font-black nav-btn transition-all ${activeTab === 'map' ? 'tab-active' : 'text-slate-400'}`}>地圖</button>
+                        <button onClick={() => setActiveTab('expense')} className={`flex-1 min-w-[80px] py-6 font-black nav-btn transition-all ${activeTab === 'expense' ? 'tab-active' : 'text-slate-400'}`}>記帳</button>
+                        <button onClick={() => setActiveTab('tools')} className={`flex-1 min-w-[80px] py-6 font-black nav-btn transition-all ${activeTab === 'tools' ? 'tab-active' : 'text-slate-400'}`}>工具</button>
                     </nav>
 
                     <div className="px-5 py-6">
@@ -344,28 +356,17 @@
                                 <h2 className="text-2xl font-black text-slate-800 px-1 flex items-center gap-3 italic underline decoration-pink-300 decoration-4 underline-offset-4 tracking-wider">景點/美食地圖 🗺️</h2>
                                 
                                 <div className="bg-white rounded-[40px] p-8 shadow-xl border-4 border-purple-50 space-y-6">
-                                    <p className="text-lg font-black text-slate-600 leading-relaxed">
-                                        這是我為 SHEN 家族收藏的福岡地圖，點擊下方按鈕即可開啟 Google 地圖 💜
-                                    </p>
-                                    <button 
-                                        onClick={() => window.open('https://maps.app.goo.gl/pd5Mgn8orC6EG7dc6', '_blank')} 
-                                        className="w-full bg-[#2D2727] text-white py-8 rounded-[35px] flex items-center justify-center gap-4 shadow-2xl active:scale-95 border-4 border-purple-900/10"
-                                    >
+                                    <p className="text-lg font-black text-slate-600 leading-relaxed">這是我為 SHEN 家族收藏的福岡地圖，點擊下方按鈕即可開啟 Google 地圖 💜</p>
+                                    <button onClick={() => window.open('https://maps.app.goo.gl/pd5Mgn8orC6EG7dc6', '_blank')} className="w-full bg-[#2D2727] text-white py-8 rounded-[35px] flex items-center justify-center gap-4 shadow-2xl active:scale-95 border-4 border-purple-900/10">
                                         <Icon name="map-pinned" size={32} className="text-pink-400" />
-                                        <div className="text-left">
-                                            <span className="block font-black text-2xl tracking-wider">開啟地圖清單</span>
-                                            <span className="text-[10px] font-bold opacity-60 uppercase tracking-widest">Google Maps List</span>
-                                        </div>
+                                        <div className="text-left"><span className="block font-black text-2xl tracking-wider">開啟地圖清單</span><span className="text-[10px] font-bold opacity-60 uppercase tracking-widest">Google Maps List</span></div>
                                     </button>
                                 </div>
 
                                 <div className="space-y-8 pb-10">
                                     {mapSpotList.map((group, idx) => (
                                         <div key={idx} className="space-y-4">
-                                            <h3 className="text-xl font-black text-[#8A63B3] px-4 flex items-center gap-2">
-                                                <Icon name={idx === 0 ? "sparkles" : "utensils"} size={20} className="text-[#FF91C1]" />
-                                                {group.category}
-                                            </h3>
+                                            <h3 className="text-xl font-black text-[#8A63B3] px-4 flex items-center gap-2"><Icon name={idx === 0 ? "sparkles" : idx === 1 ? "shopping" : "utensils"} size={20} className="text-[#FF91C1]" />{group.category}</h3>
                                             <div className="grid grid-cols-1 gap-3 px-2">
                                                 {group.items.map((item, i) => (
                                                     <div key={i} onClick={() => openMap(item)} className="kuromi-card p-5 flex items-center justify-between active:scale-95 transition-all shadow-sm border-2 border-purple-50 hover:bg-purple-50/30">
@@ -380,7 +381,7 @@
                             </div>
                         )}
 
-                        {/* 記帳區域 */}
+                        {/* 2. 記帳區域 */}
                         {activeTab === 'expense' && (
                             <div className="space-y-6 animate-in fade-in">
                                 <div className="bg-[#2D2727] text-white p-8 rounded-[40px] shadow-xl space-y-6">
@@ -401,14 +402,52 @@
                             </div>
                         )}
 
-                        {/* 🛠️ 修改：工具區域（已移除願望清單） */}
+                        {/* 3. 工具區域 */}
                         {activeTab === 'tools' && (
-                            <div className="space-y-10 animate-in fade-in">
+                            <div className="space-y-10 animate-in fade-in pb-10">
+                                {/* 🛠️ 新增：航班資訊 */}
+                                <section className="bg-white rounded-[40px] border-4 border-slate-800 p-8 shadow-xl relative overflow-hidden">
+                                    <div className="absolute right-0 top-0 kuromi-gradient p-4 rounded-bl-3xl"><Icon name="plane" className="text-white" size={24} /></div>
+                                    <h3 className="text-2xl font-black mb-6 text-slate-800 italic underline decoration-pink-300">航班詳情 ✈️</h3>
+                                    <div className="space-y-6">
+                                        <div className="flex justify-between items-center bg-slate-50 p-4 rounded-2xl">
+                                            <div className="text-left"><p className="text-xs font-bold text-slate-400">5/30 去程 CI128</p><p className="text-lg font-black text-slate-800">14:40 - 18:05</p></div>
+                                            <div className="text-right"><p className="text-xs font-bold text-slate-400">航廈</p><p className="text-lg font-black text-pink-500">第一航廈</p></div>
+                                        </div>
+                                        <div className="flex justify-between items-center bg-slate-50 p-4 rounded-2xl">
+                                            <div className="text-left"><p className="text-xs font-bold text-slate-400">6/06 回程 CI129</p><p className="text-lg font-black text-slate-800">19:10 - 20:35</p></div>
+                                            <div className="text-right"><p className="text-xs font-bold text-slate-400">航廈</p><p className="text-lg font-black text-pink-500">國際線</p></div>
+                                        </div>
+                                    </div>
+                                </section>
+
                                 <section className="bg-white rounded-[40px] border-4 border-[#9D76C1] p-8 shadow-xl text-center">
                                     <Icon name="hotel" size={40} className="text-purple-200 mx-auto mb-2 animate-bounce" />
                                     <h3 className="text-2xl font-black mb-1 text-[#2D2727]">博多西鐵 CROOM</h3>
                                     <p className="text-[10px] text-slate-400 mb-6 font-bold tracking-widest uppercase">博多祇園櫛田神社前站</p>
                                     <div className="flex gap-4"><button onClick={() => window.open('https://www.google.com/maps/search/?api=1&query=博多祇園櫛田神社前西鐵克魯姆酒店','_blank')} className="flex-1 kuromi-gradient text-white py-4 rounded-2xl font-black text-sm shadow-md">地圖定位</button><a href="tel:092-235-0311" className="flex-1 border-2 border-[#2D2727] text-center py-4 rounded-2xl font-black text-sm">撥打電話</a></div>
+                                </section>
+
+                                {/* 🛠️ 新增：生存日語摺疊清單 */}
+                                <section>
+                                    <div onClick={() => toggleCategory('生存日語小手冊')} className="flex items-center justify-between bg-white p-6 rounded-[30px] border-2 border-pink-100 shadow-sm active:bg-pink-50 cursor-pointer">
+                                        <div className="flex items-center gap-3">
+                                            <div className="p-3 bg-pink-100 rounded-2xl text-pink-400"><Icon name="languages" size={24} /></div>
+                                            <p className="text-2xl font-black text-pink-500 tracking-wide">生存日語手冊</p>
+                                        </div>
+                                        <Icon name={expandedCats['生存日語小手冊'] ? "chevron-down" : "chevron-right"} size={28} className="text-pink-300" />
+                                    </div>
+                                    {expandedCats['生存日語小手冊'] && (
+                                        <div className="grid grid-cols-1 gap-4 mt-6 px-2 animate-in fade-in slide-in-from-top-2">
+                                            {survivalPhrases.map((p, i) => (
+                                                <div key={i} className="kuromi-card p-5 bg-white border-2 border-pink-50">
+                                                    <p className="text-[10px] font-black text-pink-300 mb-1 uppercase tracking-widest">{p.tw}</p>
+                                                    <p className="text-2xl font-black text-slate-700">{p.jp}</p>
+                                                    <p className="text-sm font-bold text-slate-400 italic">[{p.ro}]</p>
+                                                </div>
+                                            ))}
+                                        </div>
+                                    )}
                                 </section>
 
                                 <section>
@@ -434,7 +473,7 @@
                         )}
                     </div>
 
-                    {/* 編輯行程彈窗 */}
+                    {/* 編輯彈窗 */}
                     {isEditingPlan && (
                         <div className="fixed inset-0 z-[110] modal-mask flex items-center justify-center p-6"><div className="bg-white w-full rounded-[40px] p-10 shadow-2xl space-y-8 border-8 border-purple-50 animate-in zoom-in"><h3 className="text-3xl font-black text-slate-800 underline decoration-pink-300 decoration-4 underline-offset-4 text-center">{editingPlan ? '修改計畫 ✏️' : '新增計畫 ✏️'}</h3><div className="space-y-6 text-left"><div><label className="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-1">預計時間</label><input value={editPlanBuffer.time} onChange={(e) => setEditPlanBuffer({...editPlanBuffer, time: e.target.value})} placeholder="14:30" className="w-full border-2 border-purple-50 p-4 text-3xl font-black focus:border-purple-400 outline-none bg-slate-50 rounded-2xl mt-1" /></div><div><label className="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-1">計畫內容</label><input value={editPlanBuffer.title} onChange={(e) => setEditPlanBuffer({...editPlanBuffer, title: e.target.value})} placeholder="要去哪裡呢？" className="w-full border-2 border-purple-50 p-4 text-2xl font-black focus:border-purple-400 outline-none bg-slate-50 rounded-2xl mt-1" /></div></div><div className="flex gap-4 pt-2"><button onClick={savePlan} disabled={isSaving} className="flex-1 kuromi-gradient text-white py-5 rounded-full font-black text-2xl shadow-lg active:scale-95 disabled:opacity-50">{isSaving ? <Icon name="refresh" className="animate-spin-custom" size={24} /> : "儲存 💜"}</button><button onClick={() => { setIsEditingPlan(false); setEditingPlan(null); }} className="px-8 bg-slate-100 text-slate-400 rounded-full font-black text-sm text-center transition-all">取消</button></div></div></div>
                     )}
