--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         const auth = firebase.auth();
         const db = firebase.firestore();
         const appId = "fukuoka-2026";
+        const apiKey = ""; // API key provided by environment
 
         // 🛠️ 定義固定行程重點
         const DEFAULT_PLANS = {
@@ -170,7 +171,8 @@
                 'languages': "M5 8l6 6M4 14l6-6M2 5h12M7 2h1M22 22l-5-10-5 10M14 18h6",
                 'sun': "M12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10z M12 1v2 M12 21v2 M4.22 4.22l1.42 1.42 M18.36 18.36l1.42 1.42 M1 12h2 M21 12h2 M4.22 19.78l1.42-1.42 M18.36 5.64l1.42-1.42",
                 'cloud': "M17.5 19a5.5 5.5 0 0 0 0-11 1.5 1.5 0 0 0-1.5 1.5A7 7 0 1 0 5 15.5 5.5 5.5 0 0 0 10.5 21h7",
-                'cloud-rain': "M16 13v8 M8 13v8 M12 15v8 M20 16.58A5 5 0 0 0 18 7h-1.26A8 8 0 1 0 4 15.25"
+                'cloud-rain': "M16 13v8 M8 13v8 M12 15v8 M20 16.58A5 5 0 0 0 18 7h-1.26A8 8 0 1 0 4 15.25",
+                'volume': "M11 5L6 9H2v6h4l5 4V5z M19.07 4.93a10 10 0 0 1 0 14.14 M15.54 8.46a5 5 0 0 1 0 7.07"
             };
             return (
                 <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className={`${className} pointer-events-none transition-all`}>
@@ -192,11 +194,12 @@
             const exchangeRate = 0.211;
 
             const [weather, setWeather] = useState({ temp: '--', code: 0, loading: true });
+            const [speakingId, setSpeakingId] = useState(null);
 
             const [expandedCats, setExpandedCats] = useState({
                 '一、證件與金錢': true, '二、Ruby 寶寶專區': true, '三、衣物配件': true,
                 '四、3C 數位產品': true, '五、藥品與保健': true, '六、盥洗與清潔': true,
-                '生存日語小手冊': false
+                '生存日語小手冊': true
             });
 
             const mapSpotList = [
@@ -206,12 +209,12 @@
             ];
 
             const survivalPhrases = [
-                { jp: 'ありがとう', ro: 'Arigatou', tw: '謝謝' },
-                { jp: 'すみません', ro: 'Sumimasen', tw: '不好意思 / 請問' },
-                { jp: 'いくらですか？', ro: 'Ikura desu ka?', tw: '多少錢？' },
-                { jp: 'これをください', ro: 'Kore o kudasai', tw: '請給我這個' },
-                { jp: 'トイレはどこですか？', ro: 'Toire wa doko desu ka?', tw: '廁所在哪裡？' },
-                { jp: 'お会計をお願いします', ro: 'Okaikei o onegaishimasu', tw: '請幫我結帳' }
+                { id: 'ph1', jp: 'ありがとう', ro: 'Arigatou', tw: '謝謝' },
+                { id: 'ph2', jp: 'すみません', ro: 'Sumimasen', tw: '不好意思 / 請問' },
+                { id: 'ph3', jp: 'いくらですか？', ro: 'Ikura desu ka?', tw: '多少錢？' },
+                { id: 'ph4', jp: 'これをください', ro: 'Kore o kudasai', tw: '請給我這個' },
+                { id: 'ph5', jp: 'トイレはどこですか？', ro: 'Toire wa doko desu ka?', tw: '廁所在哪裡？' },
+                { id: 'ph6', jp: 'お会計をお願いします', ro: 'Okaikei o onegaishimasu', tw: '請幫我結帳' }
             ];
 
             const [newExpense, setNewExpense] = useState({ 
@@ -260,7 +263,6 @@
                             loading: false
                         });
                     } catch (e) {
-                        console.error("天氣載入失敗", e);
                         setWeather(prev => ({ ...prev, loading: false }));
                     }
                 };
@@ -298,7 +300,6 @@
                 return () => { unsubExp(); unsubItin(); };
             }, [user]);
 
-            // --- 🛠️ 整合固定行程重點與雲端資料 ---
             const currentDayPlans = useMemo(() => {
                 const day = dates[selectedDayIdx];
                 if (!day) return [];
@@ -312,7 +313,6 @@
                 };
 
                 const cloudPlans = (itineraryData || []).filter(p => p && p.targetDate === target);
-                // 加入我為您新增的固定行程重點
                 const staticPlans = (DEFAULT_PLANS[target] || []).map(p => ({ 
                     ...p, 
                     id: `static-${target}-${p.time}`, 
@@ -321,6 +321,71 @@
 
                 return [...cloudPlans, ...staticPlans].sort((a,b) => timeToMinutes(a.time) - timeToMinutes(b.time));
             }, [itineraryData, selectedDayIdx]);
+
+            // 🛠️ 語音播放功能
+            const speakPhrase = async (phrase) => {
+                if (speakingId) return;
+                setSpeakingId(phrase.id);
+                
+                try {
+                    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-tts:generateContent?key=${apiKey}`, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({
+                            contents: [{ parts: [{ text: `Say clearly in Japanese: ${phrase.jp}` }] }],
+                            generationConfig: {
+                                responseModalities: ["AUDIO"],
+                                speechConfig: {
+                                    voiceConfig: { prebuiltVoiceConfig: { voiceName: "Kore" } }
+                                }
+                            },
+                            model: "gemini-2.5-flash-preview-tts"
+                        })
+                    });
+
+                    const result = await response.json();
+                    const audioData = result.candidates?.[0]?.content?.parts?.[0]?.inlineData?.data;
+
+                    if (audioData) {
+                        const binaryString = window.atob(audioData);
+                        const len = binaryString.length;
+                        const bytes = new Uint8Array(len);
+                        for (let i = 0; i < len; i++) { bytes[i] = binaryString.charCodeAt(i); }
+
+                        // PCM to WAV Conversion
+                        const sampleRate = 24000;
+                        const wavHeader = new ArrayBuffer(44);
+                        const view = new DataView(wavHeader);
+                        view.setUint32(0, 0x52494646, false); // "RIFF"
+                        view.setUint32(4, 36 + len, true);
+                        view.setUint32(8, 0x57415645, false); // "WAVE"
+                        view.setUint32(12, 0x666d7420, false); // "fmt "
+                        view.setUint32(16, 16, true);
+                        view.setUint16(20, 1, true); // PCM
+                        view.setUint16(22, 1, true); // Mono
+                        view.setUint32(24, sampleRate, true);
+                        view.setUint32(28, sampleRate * 2, true);
+                        view.setUint16(32, 2, true);
+                        view.setUint16(34, 16, true);
+                        view.setUint32(36, 0x64617461, false); // "data"
+                        view.setUint32(40, len, true);
+
+                        const blob = new Blob([wavHeader, bytes], { type: 'audio/wav' });
+                        const url = URL.createObjectURL(blob);
+                        const audio = new Audio(url);
+                        audio.onended = () => {
+                            setSpeakingId(null);
+                            URL.revokeObjectURL(url);
+                        };
+                        audio.play();
+                    } else {
+                        setSpeakingId(null);
+                    }
+                } catch (e) {
+                    console.error("Speech Error:", e);
+                    setSpeakingId(null);
+                }
+            };
 
             const handleJpyChange = (v) => { setFxJpy(v); setFxTwd(v === '' ? '' : Math.round(parseFloat(v) * exchangeRate).toString()); };
             const handleTwdChange = (v) => { setFxTwd(v); setFxJpy(v === '' ? '' : Math.round(parseFloat(v) / exchangeRate).toString()); };
@@ -530,10 +595,18 @@
                                     {expandedCats['生存日語小手冊'] && (
                                         <div className="grid grid-cols-1 gap-4 mt-6 px-2 animate-in fade-in slide-in-from-top-2">
                                             {survivalPhrases.map((p, i) => (
-                                                <div key={i} className="kuromi-card p-5 bg-white border-2 border-pink-50">
-                                                    <p className="text-[10px] font-black text-pink-300 mb-1 uppercase tracking-widest">{p.tw}</p>
-                                                    <p className="text-2xl font-black text-slate-700">{p.jp}</p>
-                                                    <p className="text-sm font-bold text-slate-400 italic">[{p.ro}]</p>
+                                                <div key={i} className="kuromi-card p-5 bg-white border-2 border-pink-50 flex justify-between items-center">
+                                                    <div>
+                                                        <p className="text-[10px] font-black text-pink-300 mb-1 uppercase tracking-widest">{p.tw}</p>
+                                                        <p className="text-2xl font-black text-slate-700">{p.jp}</p>
+                                                        <p className="text-sm font-bold text-slate-400 italic">[{p.ro}]</p>
+                                                    </div>
+                                                    <button 
+                                                        onClick={() => speakPhrase(p)}
+                                                        className={`p-4 rounded-full transition-all active:scale-90 ${speakingId === p.id ? 'bg-pink-100 text-pink-500' : 'bg-purple-50 text-purple-400'}`}
+                                                    >
+                                                        <Icon name={speakingId === p.id ? "refresh" : "volume"} size={24} className={speakingId === p.id ? 'animate-spin' : ''} />
+                                                    </button>
                                                 </div>
                                             ))}
                                         </div>
