--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 { id: 'ph2', jp: 'すみません', ro: 'Sumimasen', tw: '不好意思 / 請問' },
                 { id: 'ph3', jp: 'いくらですか？', ro: 'Ikura desu ka?', tw: '多少錢？' },
                 { id: 'ph4', jp: 'これをください', ro: 'Kore o kudasai', tw: '請給我這個' },
-                { id: 'ph5', jp: 'トイレはどこですか？', ro: 'Toire wa doko desu ka?', tw: '廁所在哪裡？' },
+                { id: 'ph5', jp: 'トイレは順にどこですか？', ro: 'Toire wa doko desu ka?', tw: '廁所在哪裡？' },
                 { id: 'ph6', jp: 'お会計をお願いします', ro: 'Okaikei o onegaishimasu', tw: '請幫我結帳' }
             ];
 
@@ -300,6 +300,7 @@
                 return () => { unsubExp(); unsubItin(); };
             }, [user]);
 
+            // --- 🛠️ 整合固定行程重點與雲端資料 (優化 ID 與 去重) ---
             const currentDayPlans = useMemo(() => {
                 const day = dates[selectedDayIdx];
                 if (!day) return [];
@@ -313,11 +314,16 @@
                 };
 
                 const cloudPlans = (itineraryData || []).filter(p => p && p.targetDate === target);
-                const staticPlans = (DEFAULT_PLANS[target] || []).map(p => ({ 
-                    ...p, 
-                    id: `static-${target}-${p.time}`, 
-                    isStatic: true 
-                }));
+                const cloudIds = new Set(cloudPlans.map(p => p.id));
+
+                // 修正：產生不含斜線的安全 ID
+                const staticPlans = (DEFAULT_PLANS[target] || [])
+                    .map(p => ({ 
+                        ...p, 
+                        id: `static-${target.replace('/', '-')}-${p.time.replace(':', '-')}`, 
+                        isStatic: true 
+                    }))
+                    .filter(p => !cloudIds.has(p.id)); // 如果雲端已有同 ID 的修改，則隱藏原始靜態版
 
                 return [...cloudPlans, ...staticPlans].sort((a,b) => timeToMinutes(a.time) - timeToMinutes(b.time));
             }, [itineraryData, selectedDayIdx]);
@@ -352,22 +358,21 @@
                         const bytes = new Uint8Array(len);
                         for (let i = 0; i < len; i++) { bytes[i] = binaryString.charCodeAt(i); }
 
-                        // PCM to WAV Conversion
                         const sampleRate = 24000;
                         const wavHeader = new ArrayBuffer(44);
                         const view = new DataView(wavHeader);
-                        view.setUint32(0, 0x52494646, false); // "RIFF"
+                        view.setUint32(0, 0x52494646, false); 
                         view.setUint32(4, 36 + len, true);
-                        view.setUint32(8, 0x57415645, false); // "WAVE"
-                        view.setUint32(12, 0x666d7420, false); // "fmt "
+                        view.setUint32(8, 0x57415645, false); 
+                        view.setUint32(12, 0x666d7420, false); 
                         view.setUint32(16, 16, true);
-                        view.setUint16(20, 1, true); // PCM
-                        view.setUint16(22, 1, true); // Mono
+                        view.setUint16(20, 1, true); 
+                        view.setUint16(22, 1, true); 
                         view.setUint32(24, sampleRate, true);
                         view.setUint32(28, sampleRate * 2, true);
                         view.setUint16(32, 2, true);
                         view.setUint16(34, 16, true);
-                        view.setUint32(36, 0x64617461, false); // "data"
+                        view.setUint32(36, 0x64617461, false); 
                         view.setUint32(40, len, true);
 
                         const blob = new Blob([wavHeader, bytes], { type: 'audio/wav' });
@@ -382,7 +387,6 @@
                         setSpeakingId(null);
                     }
                 } catch (e) {
-                    console.error("Speech Error:", e);
                     setSpeakingId(null);
                 }
             };
@@ -415,9 +419,19 @@
                 if (!editPlanBuffer.time || !editPlanBuffer.title || !user) return;
                 setIsSaving(true);
                 try {
-                    const id = editingPlan ? editingPlan.id : `plan-${Date.now()}`;
-                    await db.collection(`artifacts/${appId}/public/data/itinerary`).doc(id).set({ ...editPlanBuffer, targetDate: dates[selectedDayIdx].date, updatedAt: firebase.firestore.FieldValue.serverTimestamp() }, { merge: true });
-                    setIsEditingPlan(false); setEditingPlan(null); showToast("行程同步成功 💜");
+                    // 修正：確保 ID 不含非法斜線，優先使用已有 ID 或生成新 ID
+                    const safeId = editingPlan ? editingPlan.id : `plan-${Date.now()}`;
+                    await db.collection(`artifacts/${appId}/public/data/itinerary`).doc(safeId).set({ 
+                        ...editPlanBuffer, 
+                        targetDate: dates[selectedDayIdx].date, 
+                        updatedAt: firebase.firestore.FieldValue.serverTimestamp() 
+                    }, { merge: true });
+                    setIsEditingPlan(false); 
+                    setEditingPlan(null); 
+                    showToast("行程同步成功 💜");
+                } catch(e) { 
+                    console.error("儲存失敗:", e);
+                    alert("儲存失敗，請檢查網路連線 💜");
                 } finally { setIsSaving(false); }
             };
 
@@ -432,6 +446,7 @@
 
             return (
                 <div className="max-w-md mx-auto min-h-screen relative pb-20">
+                    {/* Toast */}
                     <div className={`fixed top-6 left-1/2 -translate-x-1/2 z-[200] transition-all duration-500 ${toast.show ? 'opacity-100 translate-y-0' : 'opacity-0 -translate-y-10 pointer-events-none'}`}>
                         <div className="bg-black/90 text-white px-6 py-3 rounded-full flex items-center gap-2 shadow-xl border border-purple-400 backdrop-blur-md text-sm text-center">
                             <Icon name="check-circle" size={18} className="text-pink-400" />
@@ -468,6 +483,7 @@
                     </nav>
 
                     <div className="px-5 py-6">
+                        {/* 1. 行程區域 */}
                         {activeTab === 'itinerary' && (
                             itineraryView === 'list' ? (
                                 <div className="space-y-6 animate-in fade-in">
